--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mime": "^1.3.4",
     "mongodb": "~2.1.0",
     "multer": "^1.1.0",
+    "npmlog": "^2.0.3",
     "parse": "^1.8.0",
     "parse-server-fs-adapter": "^1.0.0",
     "parse-server-push-adapter": "^1.0.0",
